feat: authorization and authentication with keycloak

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,16 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/quantum-stock
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/realms/quantum-stock/protocol/openid-connect/certs
+
+jwt.auth.converter.resource-id=quantum-stock
+jwt.auth.converter.principle-attribute=preferred_username
+
+keycloak.server.url=http://localhost:9090
+keycloak.realm.name=quantum-stock
+keycloak.realm.master=master
+keycloak.admin.cli=admin-cli
+keycloak.user.console=admin
+keycloak.console.password=admin
