--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,8 @@ MYSQL_PASSWORD=12345678
 MYSQL_ROOT_PASSWORD=rootroot
 DATABASE_URL=jdbc:mysql://inventory-db-service:${MYSQL_PORT}/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true
 VOLUME_PATH=~/quantum-stock-data
+
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
+KEYCLOAK_VOLUME_PATH=~/keycloak-data
+KEYCLOAK_PORT=9090
