--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -12,6 +12,20 @@ services:
     volumes:
       - ${VOLUME_PATH}:/var/lib/mysql
 
+  keycloak-service:
+    image: keycloak/keycloak:26.2
+    ports:
+        - "${KEYCLOAK_PORT}:${KEYCLOAK_PORT}"
+    environment:
+      - KEYCLOAK_ADMIN=${KEYCLOAK_ADMIN}
+      - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD}
+      - KEYCLOAK_IMPORT=/opt/keycloak/data/import/keycloak-realm-export.json
+    volumes:
+      - ${KEYCLOAK_VOLUME_PATH}:/opt/keycloak/data
+      - ./keycloak-realm-export.json:/opt/keycloak/data/import/keycloak-realm-export.json
+    command: [ "start-dev", "--http-port", "${KEYCLOAK_PORT:-9090}", "--import-realm" ]
+
+
 #  app-service:
 #    build:
 #      context: .
