--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,6 @@ keycloak.realm.master=master
 keycloak.admin.cli=admin-cli
 keycloak.user.console=root
 keycloak.console.password=root
+
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
