feat: Update Keycloak admin credentials and enhance configuration in environment files

--- a/backend/.env
+++ b/backend/.env
@@ -8,7 +8,7 @@ MYSQL_ROOT_PASSWORD=rootroot
 DATABASE_URL=jdbc:mysql://inventory-db-service:${MYSQL_PORT}/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true
 VOLUME_PATH=~/quantum-stock-data
 
-KEYCLOAK_ADMIN=root
-KEYCLOAK_ADMIN_PASSWORD=root
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
 KEYCLOAK_VOLUME_PATH=~/keycloak-data
 KEYCLOAK_PORT=9090
