chore: add another mysql db to docker compose for testing purposes

--- a/backend/.env
+++ b/backend/.env
@@ -8,6 +8,13 @@ MYSQL_ROOT_PASSWORD=rootroot
 DATABASE_URL=jdbc:mysql://inventory-db-service:${MYSQL_PORT}/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true
 VOLUME_PATH=~/quantum-stock-data
 
+TEST_MYSQL_PORT=3307
+TEST_MYSQL_DATABASE=test_inventory_db
+TEST_MYSQL_USER=test_user
+TEST_MYSQL_PASSWORD=test_12345678
+TEST_MYSQL_ROOT_PASSWORD=test_rootroot
+TEST_DATABASE_URL=jdbc:mysql://localhost:${TEST_MYSQL_PORT}/${TEST_MYSQL_DATABASE}?allowPublicKeyRetrieval=true
+
 KEYCLOAK_ADMIN=root
 KEYCLOAK_ADMIN_PASSWORD=root
 KEYCLOAK_VOLUME_PATH=~/keycloak-data
