Update Keycloak credentials and add use-debounce package
- Changed Keycloak console user from 'root' to 'admin' and updated the password accordingly in application.properties.
- Added 'use-debounce' package with version ^10.0.5 to package.json and updated pnpm-lock.yaml to reflect this addition.

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -19,11 +19,11 @@ services:
     environment:
       - KEYCLOAK_ADMIN=${KEYCLOAK_ADMIN}
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD}
-#      - KEYCLOAK_IMPORT=/opt/keycloak/data/import/keycloak-realm-export.json
+      - KEYCLOAK_IMPORT=/opt/keycloak/data/import/keycloak-realm-export.json
     volumes:
       - ${KEYCLOAK_VOLUME_PATH}:/opt/keycloak/data
-#      - ./keycloak-realm-export.json:/opt/keycloak/data/import/keycloak-realm-export.json
-    command: [ "start-dev", "--http-port", "${KEYCLOAK_PORT:-9090}" ]
+      - ./keycloak-realm-export.json:/opt/keycloak/data/import/keycloak-realm-export.json
+    command: [ "start-dev", "--http-port", "${KEYCLOAK_PORT:-9090}", "--import-realm" ]
 
 
 #  app-service:
