--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,5 +19,5 @@ keycloak.server.url=http://localhost:9090
 keycloak.realm.name=quantum-stock
 keycloak.realm.master=master
 keycloak.admin.cli=admin-cli
-keycloak.user.console=root
-keycloak.console.password=root
+keycloak.user.console=admin
+keycloak.console.password=admin
