--- a/frontend/quantum-stock/package.json
+++ b/frontend/quantum-stock/package.json
@@ -24,6 +24,7 @@
 		"recharts": "^3.0.0",
 		"swr": "^2.3.4",
 		"tailwindcss": "3",
+		"use-debounce": "^10.0.5",
 		"usehooks-ts": "^3.1.1",
 		"zustand": "^5.0.6"
 	},
@@ -37,6 +38,9 @@
 		"typescript": "^5"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "@heroui/shared-utils"]
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"@heroui/shared-utils"
+		]
 	}
 }
